Fixed problem in bgroup, and added support for wrapfig

--- a/plasTeX/Renderers/XHTML/Themes/default/styles/styles.css
+++ b/plasTeX/Renderers/XHTML/Themes/default/styles/styles.css
@@ -109,6 +109,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Lucida Grande", Arial, Helvetica, sans-serif;
 }
 
+.navigation { clear:both }
 .navigation td          { background-color: #669933;
                           color: #ffffcc;
                           font-weight: bold;
